--- a/Doc/DevelopmentPlan/DevelopmentPlan.tex
+++ b/Doc/DevelopmentPlan/DevelopmentPlan.tex
@@ -3,17 +3,16 @@
 \usepackage{booktabs}
 \usepackage{tabularx}
 
-\title{SE 3XA3: Development Plan\\Title of Project}
+\title{SE 3XA3: Development Plan\\T-Rex Acceleration}
 
-\author{Team \#, Team Name
-		\\ Student 1 name and macid
-		\\ Student 2 name and macid
-		\\ Student 3 name and macid
+\author{Team 15, Dev\textsuperscript{enthusiasts}
+		\\ Namit Chopra (choprn9)
+		\\ Zihao Du name (duz12)
+		\\ Andrew Balmakund (balmakua)
 }
 
 \date{}
 
-\input{../Comments}
 
 \begin{document}
 
@@ -23,9 +22,7 @@
 \toprule
 \textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
 \midrule
-Date1 & Name(s) & Description of changes\\
-Date2 & Name(s) & Description of changes\\
-... & ... & ...\\
+02/02/2021 & Zihao Du, Namit Chopra, Andrew Balmakund & Initial Draft\\
 \bottomrule
 \end{tabularx}
 \end{table}
@@ -34,21 +31,59 @@ Date2 & Name(s) & Description of changes\\
 
 \maketitle
 
-Put your introductory blurb here.
+%Put your introductory blurb here.
 
 \section{Team Meeting Plan}
+Meetings will take place every Tuesday night at 8:00pm to 9:00pm (roughly around when all group members are expected to finish their individual lab exercises in L03) and Wednesday at 6:00pm to 8:00pm. All team meetings will be held on Microsoft Teams in the channel ``Lab3Grups3xa3'' in ``Group 3-15'' room. Andrew will be log and record information and decision discussed in the meeting, Namit will make updates to the agenda and Zihao will chair the meeting.
+
+At each meeting, all members must be present. These meetings are focused for important group decisions and group work. Assigned individual work will be done outside of these meetings. Each member will discuss what they have completed before the meeting and what still remains. As a group, look at what deliverable is due the current or following week, start looking at these deliverables and brainstorm ideas. At the end of the meeting, each member will be assigned individual task be completed by the next meeting.
+
+If a member is absent, they must notify the rest of the group with a reason and another time to schedule the meeting. If the meeting cannot be postponed due to an absent member, this absent member must reach out to inquire about the content discussed in the meeting.
 
 \section{Team Communication Plan}
+The team will use a combination of Facebook Messenger and Microsoft Teams as a main communication platform. Facebook messenger will be used to discuss meeting times, discuss small ideas about different aspects about the project, minor issues, etc. All major ideas, issues and decision shall be discussed in the team meeting. The team will also use Microsoft Teams and E-mail to contact the TA's and the professor for further guidance with the deliverables of the project.  
 
 \section{Team Member Roles}
 
+Zihao will be responsible for leading each meeting and being a tester. Andrew will be appointed as a scribe for each meeting, recording information and decisions discussed. Namit will be reponsible for making updates to the agenda, organizing the Git repo. As well, all members will be developers and involved with documentation.
+
+\begin{table}[h]
+    \centering
+    \begin{tabular}{|c|c|}
+    \hline
+         Member Names & Roles/Expert  \\
+         \hline
+         Zihao & Chair, Tester, Developer, Documentation \\
+         \hline
+         Andrew & Scribe, Developer, Documentation \\
+         \hline
+         Namit & Update Agenda, Git, Developer, Documentation \\
+         \hline
+    \end{tabular}
+    %\caption{Caption}
+    \label{tab:my_label}
+\end{table}
+
 \section{Git Workflow Plan}
+The team will use GitLab for version control. Only contents that are accepted in team meetings will be committed to GitLab. Once the repository is ready for a certain submission, a final commit will be tagged according to the requirements to mark the version of the deliverable.
 
 \section{Proof of Concept Demonstration Plan}
+- 
+
 
 \section{Technology}
+\subsection{Programming Language: }
+The language Python will be used to build the project. As the project involves developing a game, the Python library Pygame will be used. Pygame is a library composed of modules that specialize in developing games. As the game will not be graphics intensive, Pygame should be sufficient to produce the intended visual quality of the game.  
+
+
+\subsection{Testing Framework}
+
+\subsection{Documentation}
+All text documents for this project will be built using LaTeX. The LaTeX file and PDF will be available for each document in their corresponding folder on GitLab. 
+
 
 \section{Coding Style}
+Since it is a Python based project, We will follow PEP8 standard as our coding style for code consistency.
 
 \section{Project Schedule}
 
