Initial Development Plan v0

--- a/Doc/DevelopmentPlan/DevelopmentPlan.tex
+++ b/Doc/DevelopmentPlan/DevelopmentPlan.tex
@@ -2,6 +2,7 @@
 
 \usepackage{booktabs}
 \usepackage{tabularx}
+\usepackage{hyperref}
 
 \title{SE 3XA3: Development Plan\\T-Rex Acceleration}
 
@@ -23,6 +24,7 @@
 \textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
 \midrule
 02/02/2021 & Zihao Du, Namit Chopra, Andrew Balmakund & Initial Draft\\
+02/04/2021 & Andrew Balmakund, Namit Chopra, Zihao Du & Second Draft\\
 \bottomrule
 \end{tabularx}
 \end{table}
@@ -31,21 +33,22 @@
 
 \maketitle
 
-%Put your introductory blurb here.
+This documents is about the plan for developing and testing the project.
 
 \section{Team Meeting Plan}
-Meetings will take place every Tuesday night at 8:00pm to 9:00pm (roughly around when all group members are expected to finish their individual lab exercises in L03) and Wednesday at 6:00pm to 8:00pm. All team meetings will be held on Microsoft Teams in the channel ``Lab3Grups3xa3'' in ``Group 3-15'' room. Andrew will be log and record information and decision discussed in the meeting, Namit will make updates to the agenda and Zihao will chair the meeting.
+Meetings will take place every Tuesday from 8:00 pm to 9:00 pm (roughly around when all group members are expected to finish their lab exercises in L03) and Wednesday from 6:00 pm to 8:00 pm. All team meetings will be held on Microsoft Teams in the channel ``Lab3Groups3xa3'' in the ``Group 3-15'' room. Andrew will be log and record information and decision discussed in the meeting, Namit will make updates to the agenda and Zihao will chair the meeting.
 
-At each meeting, all members must be present. These meetings are focused for important group decisions and group work. Assigned individual work will be done outside of these meetings. Each member will discuss what they have completed before the meeting and what still remains. As a group, look at what deliverable is due the current or following week, start looking at these deliverables and brainstorm ideas. At the end of the meeting, each member will be assigned individual task be completed by the next meeting.
+The agenda for the meeting will discuss important group decisions and group work. Assigned individual work will be done outside of these meetings. Each member will discuss what they have completed before the meeting and which tasks remain. The meeting will be used to brainstorm ideas for the next deliverable(s). Individual tasks will be assigned at the end of the meeting to be completed before the next meeting.
 
-If a member is absent, they must notify the rest of the group with a reason and another time to schedule the meeting. If the meeting cannot be postponed due to an absent member, this absent member must reach out to inquire about the content discussed in the meeting.
+All members must be present for all meetings. If a member is absent, they must notify the rest of the group one hour before the meeting with a reason. If the meeting cannot be postponed, the absent member must reach out to inquire about the content discussed in the meeting.
 
 \section{Team Communication Plan}
-The team will use a combination of Facebook Messenger and Microsoft Teams as a main communication platform. Facebook messenger will be used to discuss meeting times, discuss small ideas about different aspects about the project, minor issues, etc. All major ideas, issues and decision shall be discussed in the team meeting. The team will also use Microsoft Teams and E-mail to contact the TA's and the professor for further guidance with the deliverables of the project.  
+The team will use a combination of Facebook Messenger and Microsoft Teams as the main communication platform. Facebook Messenger will be used to discuss meeting times, discuss small ideas about different aspects of the project, and minor issues. All major ideas, issues, and decisions shall be discussed in the team meeting. The team will also use Microsoft Teams and E-mail to contact the TA's and the professor for further guidance with the deliverables of the project.  
 
 \section{Team Member Roles}
+To build a large project with a small team, each member must occupy multiple roles. The leader of the group and meetings will be Zihao.
+Zihao will also be responsible for being the lead tester. Andrew will be appointed as a scribe for each meeting, recording information and decisions discussed. Namit will be responsible for the meeting agenda and will be the lead designer. Furthermore, all members will be developers and involved with documentation. Finally, for each draft of every document, a member will be selected to push the changes to GitLab.
 
-Zihao will be responsible for leading each meeting and being a tester. Andrew will be appointed as a scribe for each meeting, recording information and decisions discussed. Namit will be reponsible for making updates to the agenda, organizing the Git repo. As well, all members will be developers and involved with documentation.
 
 \begin{table}[h]
     \centering
@@ -53,11 +56,11 @@ Zihao will be responsible for leading each meeting and being a tester. Andrew wi
     \hline
          Member Names & Roles/Expert  \\
          \hline
-         Zihao & Chair, Tester, Developer, Documentation \\
+         Zihao & \shortstack{ Team Leader, Meeting Chair,  Lead Tester, \\ Developer, Documentation }\\
          \hline
-         Andrew & Scribe, Developer, Documentation \\
+         Andrew & \shortstack{ Meeting Scribe, UI Developer, Tester, Developer, \\ Documentation}\\
          \hline
-         Namit & Update Agenda, Git, Developer, Documentation \\
+         Namit & \shortstack{Make Agenda, Lead Designer, Tester, Developer, \\ Documentation} \\
          \hline
     \end{tabular}
     %\caption{Caption}
@@ -65,30 +68,34 @@ Zihao will be responsible for leading each meeting and being a tester. Andrew wi
 \end{table}
 
 \section{Git Workflow Plan}
-The team will use GitLab for version control. Only contents that are accepted in team meetings will be committed to GitLab. Once the repository is ready for a certain submission, a final commit will be tagged according to the requirements to mark the version of the deliverable.
+The team will use GitLab for version control. The repository is centralized around the master branch. Branches are created for new features and merged with the master branch. Once the repository is ready for a certain submission, a final commit will be tagged according to the requirements to mark the version of the deliverable. The team will use labels to track bugs, documentation requirements, and issues that need to be discussed. Milestones will be used to check deadlines of deliverables.
+
 
 \section{Proof of Concept Demonstration Plan}
-- 
+A significant risk of the redevelopment is testing the entirety of the system. From the User Interface (UI) to various core components of the game to different visuals, will pose a challenge to ensure all aspects of the system are working together correctly. Another risk would involve incorporating different stage levels throughout the game; changing the thematic of the game environment as the player continues to cross different checkpoints. Furthermore, all dynamic visuals need to transition accordingly at specific stages in the game.  
 
+To overcome this risk, during the development of the game the developers will follow the Incremental Build Software Development model. This model allows for a better system design and test planning through incremental stages of the development. There will be various testing techniques incorporated into our test plan such as exploratory testing, white-box testing, and a few others.
 
 \section{Technology}
 \subsection{Programming Language: }
-The language Python will be used to build the project. As the project involves developing a game, the Python library Pygame will be used. Pygame is a library composed of modules that specialize in developing games. As the game will not be graphics intensive, Pygame should be sufficient to produce the intended visual quality of the game.  
+The language Python will be used to build the project. As the project involves developing a game, the Python library Pygame will be used. Pygame is a library composed of modules that specialize in developing games. As the game will not be graphics-intensive, Pygame should be sufficient to produce the intended visual quality of the game.  
 
+\subsection{IDE}
+There will no be default IDE used for this project. As the project uses Python, one of the most popular languages, it is supported by the IDEs. As long as the selected IDE can run all the Python files along with game assets, any IDE may be used. For consistency among the group, all members prefer to use VSCode.
 
 \subsection{Testing Framework}
+Testing of the project will be achieved with an automated testing tool and manual testing. Pytest is a popular automated testing framework based on Python. The team will use Pytest to perform unit testing and integration testing. System testing will be achieved by manual testing to ensure that the game is behaving as expected at run time. 
 
 \subsection{Documentation}
-All text documents for this project will be built using LaTeX. The LaTeX file and PDF will be available for each document in their corresponding folder on GitLab. 
-
+All text documents for this project will be built using LaTeX. The LaTeX file and PDF will be available for each document in their corresponding folder on GitLab. As all members have experience using LaTeX through coursework, documents will be produced efficiently with a consistent and professional format. Doxygen will be used to document the coding files. Having experience using Doxygen, all members will be able to effectively comment the code for future modifications and maintenance. Doxygen will also be used to document all classes and methods. 
 
 \section{Coding Style}
-Since it is a Python based project, We will follow PEP8 standard as our coding style for code consistency.
+The team will follow the PEP8 standard to develop the project. A coding standard is used for the best guidelines and practices for writing code; however, it is most importantly used for consistency throughout all files. As the project will be written in Python, PEP8 will be used.   
 
 \section{Project Schedule}
-
-Provide a pointer to your Gantt Chart.
+The following is the link to our project schedule:\\
+\href{https://gitlab.cas.mcmaster.ca/se_3xa3_l3g15/se_3xa3_project/-/tree/master/ProjectSchedule/GanttT-Rex.gan}{\textit{Gantt chart and Resource chart}}
 
 \section{Project Review}
-
+Will be updated in Revision 1.
 \end{document}
